# embedding-trajectories-experiments

./: README.md
data/: test-data.json
fake-panic/: .envrc  .gitignore  README.md  generate_embedding_sequences.py  pyproject.toml
fake-panic/data/: README.md
fake-panic/src/fake_panic/: __init__.py  __main__.py
fake-panic/workspace/: 2024-08-14T11-59-31.json  2024-08-14T12-13-50.json  run_panic.py  tda_dist_matrix.py  tda_point_cloud.py
lit-trajectories/: .gitignore  README.md  pyproject.toml
lit-trajectories/data/: aesop.txt
lit-trajectories/output/: README.md
lit-trajectories/src/lit_trajectories/: __init__.py  __main__.py  chunker.py  embed.py  embedder.py  texts.py  vis.py
