[project]
name = "fake-panic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ben Swift", email = "ben@benswift.me" }
]
dependencies = [
    "requests>=2.32.3",
    "gudhi>=3.10.1",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"fake-panic" = "fake_panic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fake_panic"]
