[project]
name = "lit-trajectories"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Ben Swift", email = "ben@benswift.me" }]
dependencies = ["sentence-transformers>=3.0.1", "spacy>=3.7.6"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"lit-trajectories" = "lit_trajectories:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lit_trajectories"]
